# kinect-fusion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  align.cpp  main.cpp  main_old.cpp  recon.cpp  record.cpp
include/: FrameGetter.hh  Types.hh
src/: CMakeLists.txt
src/FrameGetter/: CMakeLists.txt  FileFrameGetter.cpp  FrameGetter.cpp  KinectFrameGetter.cpp
test/: bench.cpp  config.cpp  test.cpp  voxel_grid.cpp  zero_start_trajectory.py
